--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Game</title>
+    <title>Asteroids</title>
 
+    <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Alien01.svg/100px-Alien01.svg.png">
     <link rel="stylesheet" type="text/css" href="./styles/styles.css">
 
     <script language="JavaScript" src="./p5/p5.js"></script>
@@ -11,6 +12,7 @@
     <script src="./classes/ship.js"></script>
     <script src="./classes/asteroids.js"></script>
     <script src="./classes/laser.js"></script>
+    <script src="./classes/dom.js"></script>
     <script src="./sketch.js"></script>
 
 </head>
