--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Asteroids</title>
 
+    <link rel='stylesheet' href="./styles/main.css" type="text/css">
     <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Alien01.svg/100px-Alien01.svg.png">
 </head>
 
